# Feature-pipeline

./: .env.example  .gitignore  Makefile  README.md  Retail_Flow_Identification_and_Arbitrage.md  docker-compose.yml  pyproject.toml  wallets.txt
docs/: WALLET_FLEET_ANALYSIS.md
monitoring/grafana/dashboards/: pipeline.json  wallet_tracker.json
monitoring/prometheus/: prometheus.yml
scripts/: analyze_features.py  e2e_limitless_live.py  e2e_tob_live.py  run_pipeline.py  run_tracker.py
src/alpha_pipeline/: config.py
src/alpha_pipeline/analysis/: __init__.py  loader.py  report.py
src/alpha_pipeline/data/: __init__.py  buffer.py  collector.py  manager.py  roster.py
src/alpha_pipeline/features/: __init__.py  base.py  registry.py  runner.py
src/alpha_pipeline/metrics/: __init__.py  collector.py  exporter.py
src/alpha_pipeline/schemas/: __init__.py  enums.py  feature.py  orderbook.py  trade.py
src/alpha_pipeline/tracking/: __init__.py  collector.py  limitless_fetcher.py  loader.py  metrics.py  models.py  (+3 more)
tests/: conftest.py
tests/analysis/: test_charts.py  test_loader.py
tests/data/: test_adapters.py  test_buffer.py  test_collector.py  test_roster.py
tests/features/: test_registry.py  test_runner.py  test_wash_detection.py
tests/fixtures/: limitless_active_markets.json  limitless_orderbook.json  opinion_depth_diff.json  opinion_orderbook.json  opinion_trade.json  polymarket_book.json
tests/metrics/: test_collector.py
tests/tracking/: test_collector.py  test_limitless_fetcher.py  test_loader.py  test_models.py  test_storage.py  test_tracker.py
(+26 files in other folders)
